tooling/nargo_cli/tests/snapshots/execution_success/simple_2d_array/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "array_input",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "array",
            "length": 2,
            "type": {
              "kind": "field"
            }
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _5",
    "private parameters indices : [_0, _1, _2, _3, _4, _5]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (-1, _0) (1, _2) 0 ]",
    "EXPR [ (-1, _1) (1, _3) 0 ]",
    "EXPR [ (-1, _4) 3 ]",
    "EXPR [ (-1, _5) 3 ]"
  ],
  "debug_symbols": "nZLBDoMgDIbfpWcOgtMlvsqyGNRqSAgShCWL8d1XjUw9LFm4UNq/H4XSGTpswlAr048TVI8ZGqe0VkOtx1Z6NRqKzguD6NbeIVIITjpRVjo0HioTtGbwkjpsSZOVZrNeOlIzBmg6snRgrzSuu4UddPYb5aLcYS7uX7z4n+e3yOdlCl+KyJd5Cl/Ex/O7SOBFwXdeFEl8fvDX+z/Jk61ylx+HjBIZcKiobQIqan5O67IWcEo2Gve56INpT2Pi3zYqcZCsG1vsgsO1wKZRyQ8=",
  "file_map": {
    "50": {
      "source": "// Test accessing a multidimensional array\nfn main(x: Field, y: Field, array_input: [[Field; 2]; 2]) {\n    assert(array_input[0][0] == x);\n    assert(array_input[0][1] == y);\n\n    let arr: [[Field; 2]; 1] = [[3, 3]];\n    assert_eq(arr[0], array_input[1]);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
