tooling/nargo_cli/tests/snapshots/execution_success/simple_2d_array/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field, v1: Field, v2: [[Field; 2]; 2]):
    (no terminator instruction)
}
